--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<script src="https://www.gstatic.com/charts/loader.js"></script>
+<script src="javascripts/angular-chart.js"></script>
+<body>
+  <div ng-app="app" ng-controller="dataController">
+    <div id="columnchart_values" style="width: 800px; height: 600px;"></div>
+  </div>
+</body>
 </html>
