--- a/views/home.jade
+++ b/views/home.jade
@@ -13,6 +13,10 @@ block content
 								li First Name ---> #{user.firstName} 
 								li Last Name ---> #{user.lastName}
 						a(href='/signout', class='text-center new-account') Sign Out
+						a(href='http://h01.cob.csuchico.edu:8000/GBI_960/ParkingPal/parkingpal/index.html#/page2',
+					class='text-center new-account') ParkingPal
+					#message
+						
 	div(ng-controller='MainCtrl')
 		div
 			#chart_div(style='width: 900px; height: 500px;')
