--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css')
     script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.js")
     script(src="https://www.google.com/jsapi")
+    //script (src="http://h01.cob.csuchico.edu:8000/GBI_960/ParkingPal/parkingpal/index.html#/page2")
     script(src="javascripts/chart-app.js")
     link(rel='stylesheet', href='/stylesheets/bootstrap-social.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
